--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         </div>
       </div>
       <p class="message">Weather for Sydney, Australia</p>
+      <a href="https://github.com/kcshrad/my-project">Open source code</a>
+      <span id="code">by Shraddha Thapa</span>
     </div>
 
     <script src="src/index.js"></script>
