--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="row mt-3">
         <div class="col-6">
           <h1 id="current-city">Sydney</h1>
-          <p id="time">14:30 <br />Sunday OCT 31</p>
+          <p>Last updated:<span id="time"></span></p>
           <img src="src/images/sun-and-cloud-clip-art.png" class="weather" />
 
           <div class="description">
