--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="col-6">
           <h1 id="current-city">Sydney</h1>
           <p>Last updated:<span id="time"></span></p>
-          <img src="src/images/sun-and-cloud-clip-art.png" class="weather" />
+          <img src="" id="icon" />
 
           <div class="description">
-            <div class="col-12">Partly Cloudy</div>
+            <div class="col-12"></div>
           </div>
           <div class="col-12">
-            <div class="currentTemp">21°C</div>
+            <div class="currentTemp"></div>
 
             <button class="celsius">°C</button>
             <span class="divider"> | </span>
