updated weather forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -54,12 +54,20 @@
         </div>
 
         <div class="col-6">
-          <div class="row" id="days">
-            <div class="col-12 bg-light p-3 border">
-              <strong class="week">Mon</strong>
-              <img src="src/images/rain.png" /> L:11°C H:24°C
+          <div class="row" id="weather-forecast">
+            <div class="col-12">
+              <div class="week">Mon</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="42"
+              />
+              <div class="weather-forecast-temp">
+                <span class="weather-forecast-temp-min">L:11°C</span>
+                <span class="weather-forecast-temp-max">H:24°C</span>
+              </div>
             </div>
-            <br />
+
             <div class="col-12 bg-light p-3 border">
               <strong class="week">Tue</strong>
               <img src="src/images/thunder.png" /> L:14°C H:25°
