updated weather forecast

--- a/index.html
+++ b/index.html
@@ -54,47 +54,12 @@
         </div>
 
         <div class="col-6">
-          <div class="row" id="weather-forecast">
-            <div class="col-12">
-              <div class="week">Mon</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="42"
-              />
-              <div class="weather-forecast-temp">
-                <span class="weather-forecast-temp-min">L:11°C</span>
-                <span class="weather-forecast-temp-max">H:24°C</span>
-              </div>
+          <div class="weather-forecast" id="forecast">
+            
+            </div>
             </div>
 
-            <div class="col-12 bg-light p-3 border">
-              <strong class="week">Tue</strong>
-              <img src="src/images/thunder.png" /> L:14°C H:25°
-            </div>
-            <br />
-            <div class="col-12 bg-light p-3 border">
-              <strong class="week">Wed</strong>
-              <img src="src/images/cloudy.png" /> L:11°C H:24°C
-            </div>
-            <br />
-            <div class="col-12 bg-light p-3 border">
-              <strong class="week">Thu</strong>
-              <img src="src/images/sun-and-cloud-clip-art.png" />L:13°C H:25°C
-            </div>
-            <br />
-            <div class="col-12 bg-light p-3 border">
-              <strong class="week"> Fri</strong>
-              <img src="src/images/cloudy.png" />L:15°C H:23°C
-            </div>
-            <br />
-            <div class="col-12 bg-light p-3 border">
-              <strong class="week">Sat</strong
-              ><img src="src/images/rain.png" />L: 16°C H: 23°C
-            </div>
-          </div>
-        </div>
-      </div>
+            
       <p class="message">Weather for Sydney, Australia</p>
       <a href="https://github.com/kcshrad/my-project">Open source code</a>
       <span id="code">by Shraddha Thapa</span>
