--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <form class="search-form" id="search-form">
         <div class="row">
           <div class="col-8">
-            <input type="search" placeholder="Enter city" id="city" />
+            <input type="search" placeholder="Enter city" id="city" autocomplete="off" />
           </div>
 
           <br />
